# rpn-calculator-craft

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  pytype.cfg  roadmap.md  todo.md
src/rpn_calculator/: __init__.py
src/rpn_calculator/read/web/routers/: commands.py  index.py  stack.py
src/rpn_calculator/shared/: domain_types.py  stack_database.py
src/rpn_calculator/shared/web/: global_exception_handlers.py
src/rpn_calculator/web/: main.py
src/rpn_calculator/write/adapters/: configuration.py  inmemory_stack_repository.py
src/rpn_calculator/write/core/domain/: calculation.py  exceptions.py  rpn_stack.py
src/rpn_calculator/write/core/ports/: stack_repository.py
src/rpn_calculator/write/core/usecases/: add.py  append.py  clear.py  divide.py  multiply.py  subtract.py
src/rpn_calculator/write/web/: configuration.py  exception_handlers.py
src/rpn_calculator/write/web/routers/: index.py  request_params.py  stack.py
tests/rpn_calculator/e2e/: test_commands.py  test_stack.py
tests/rpn_calculator/unit/: test_add_command_handler.py  test_append_command_handler.py  test_clear_command_handler.py  test_divide_command_handler.py  test_multiply_command_handler.py  test_subtract_command_handler.py
