[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rpn_calculator"
authors = [{name = "Houcem Naffati", email = "houcem.naffati@visionpm.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.12"
dependencies = [
    "fastapi == 0.110.0",
    "uvicorn == 0.29.0",
]


[project.optional-dependencies]
dev = [
    "black >=24.3.0",
    "isort >=5.13.2",
    "autoflake >=2.3.1",
    "flake8 >=7.0.0",
    "pre-commit >=2.21.0",
    "pytype >= 2024.03.19 ",
    "bandit >= 1.7.4",
    "flake8-bugbear >= 22.12.6",
    "flake8-cognitive-complexity >= 0.1.0",
    ]
test = [
    "pytest ==8.1.1",
    "pytest-cov == 5.0.0",
    "httpx ==0.26.0",
    "pytest-asyncio == 0.23.6",
]


[tool.isort]
profile = "black"
py_version = 312
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.bandit]
skips = []

[tool.pytest.ini_options]
markers = []
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"